--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  release:
     name: Release
     runs-on: ubuntu-latest
 
@@ -31,6 +31,7 @@ jobs:
 
   update-homebrew:
     name: Update Homebrew Formula
+    needs: release
     runs-on: ubuntu-latest
     steps:
       - name: Extract version
